added some changes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Master</h1>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique qui a culpa, nobis et optio eius aut perspiciatis magni labore tempore laboriosam beatae nostrum minus repellendus perferendis itaque, eligendi ullam.</p>
 </body>
 </html>
