more changes in dev branch

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Master</h1>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique qui a culpa, nobis et optio eius aut perspiciatis magni labore tempore laboriosam beatae nostrum minus repellendus perferendis itaque, eligendi ullam.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae veritatis voluptate recusandae qui est a cupiditate nemo amet sapiente molestiae odit minus, perspiciatis placeat quaerat, reiciendis harum. Sint, laudantium explicabo!</p>
 </body>
 </html>
